fix: inline items in subscription form out of place

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1054,7 +1054,7 @@ header #avatar {
   flex-basis: 50%;
 }
 
-.inline {
+.inline-row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
